Fix Spacing For Content Section

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -14,11 +14,16 @@ body {
   background: #e3f4ff;
   margin: 8px;
   font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
   margin: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 16px;
+  padding-top: 16px;
 }
 
 .button-container {
